objects/Pebble_Post__c.object
<CustomObject>
    <description>The Post of an action request from a Pebble App.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Row__c</fullName>
        <description>The row from the Pebble App that generated the Post.</description>
        <inlineHelpText>The row from the Pebble App that generated the Post.</inlineHelpText>
        <label>Initiating Row</label>
        <referenceTo>Pebble_Row__c</referenceTo>
        <relationshipLabel>Pebble Posts</relationshipLabel>
        <relationshipName>Pebble_Posts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pebble_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Pebble App that created this Post.  This is primarily used to aid in the reporting.</description>
        <inlineHelpText>The parent Pebble App that created this Post.</inlineHelpText>
        <label>Pebble App</label>
        <referenceTo>Pebble_App__c</referenceTo>
        <relationshipLabel>Pebble Posts</relationshipLabel>
        <relationshipName>Pebble_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Codes__c</fullName>
        <description>This entry should only be created by the Pebble App and not be modified.</description>
        <inlineHelpText>This defines the &apos;Pebble Row Name&apos; that was used when the submission to create the Post was created.</inlineHelpText>
        <label>Row Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <label>Short Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Use this field to confirm if a Trigger or action has been completed against a specific Posted record.</description>
        <inlineHelpText>This is used to track if any Trigger has executed an action based on this record.
Completed, Pending and Failed indicates that a Trigger has run and updated this row.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watch_ID__c</fullName>
        <inlineHelpText>Which Pebble smart-watch created this record.</inlineHelpText>
        <label>Watch ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Pebble Post</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pebble_App__c</columns>
        <columns>Action__c</columns>
        <columns>Short_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP{0000000}</displayFormat>
        <label>Pebble Post Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pebble Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>